@@ -17,6 +17,8 @@ import java.util.stream.Stream;
 
 public class OraxenItems {
 
+    private OraxenItems() {}
+
     public static final NamespacedKey ITEM_ID = new NamespacedKey(OraxenPlugin.get(), "id");
     // configuration sections : their OraxenItem wrapper
     private static Map<File, Map<String, ItemBuilder>> map;
@@ -49,6 +51,10 @@ public class OraxenItems {
         return entryStream().anyMatch(entry -> entry.getKey().equals(itemId));
     }
 
+    public static boolean exists(final ItemStack itemStack) {
+        return entryStream().anyMatch(entry -> entry.getKey().equals(OraxenItems.getIdByItem(itemStack)));
+    }
+
     public static Optional<ItemBuilder> getOptionalItemById(final String id) {
         return entryStream().filter(entry -> entry.getKey().equals(id)).findFirst().map(Entry::getValue);
     }
@@ -60,7 +66,7 @@ public class OraxenItems {
     public static List<ItemBuilder> getUnexcludedItems() {
         return itemStream()
                 .filter(item -> !item.getOraxenMeta().isExcludedFromInventory())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<ItemBuilder> getUnexcludedItems(final File file) {
@@ -69,7 +75,7 @@ public class OraxenItems {
                 .values()
                 .stream()
                 .filter(item -> !item.getOraxenMeta().isExcludedFromInventory())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<ItemStack> getItemStacksByName(final List<List<String>> lists) {
@@ -91,7 +97,7 @@ public class OraxenItems {
                 }
             });
             return Stream.of(itemStack[0]);
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     public static Map<File, Map<String, ItemBuilder>> getMap() {
@@ -107,7 +113,7 @@ public class OraxenItems {
     }
 
     public static Collection<ItemBuilder> getItems() {
-        return itemStream().collect(Collectors.toList());
+        return itemStream().toList();
     }
 
     @Deprecated
